# OpenGLExploration

./: .gitignore  .gitmodules  CMakeLists.txt  OpenGL_Exploration.sln  OpenGL_Exploration.vcxproj  OpenGL_Exploration.vcxproj.filters  README.md  compile_commands.json
LearnOpenGL_Mesh_and_Model/: LearnOpenGL_Mesh_and_Model.vcxproj  LearnOpenGL_Mesh_and_Model.vcxproj.filters  Mesh.cpp  Mesh.h  Model.cpp  Model.h  TextureManager.h  glad.c  main.cpp
LearnOpenGL_Mesh_and_Model/res/: basic_fs.glsl  basic_vs.glsl
LearnOpenGL_Tut/: App.cpp  App.h  Camera.cpp  Camera.h  Cubes.cpp  Cubes_test.cpp  Cubes_test.h  LearnOpenGL_Tut.vcxproj  LearnOpenGL_Tut.vcxproj.filters  imgui.ini  main.cpp
LearnOpenGL_Tut/res/: base_vs.glsl  direction_lighting_fs.glsl  img.shader  img_fs.glsl  img_vs.glsl  lamp_fs.glsl  light_fs.glsl  multiple_lights.glsl  phong_lighting_fs.glsl  point_lighting_fs.glsl  spot_lighting_fs.glsl
Renderer/: IndexBuffer.cpp  IndexBuffer.h  Main.cpp  Renderer.h  Renderer.vcxproj  Renderer.vcxproj.filters  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
libs/gl_loader/glad/: glad.h
src/: main.cpp
src/Engine/: Engine.cpp  Engine.h  Mesh.h
src/OGL/: Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
